--- a/Studies/simple-calculator.html
+++ b/Studies/simple-calculator.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="lib/jasmine.css">
-        <link rel="stylesheet" href="dis/main.css">
+        <link rel="stylesheet" href="dist/main.css">
     </head>
     <body>
         <script src="lib/jasmine.js"></script>
@@ -28,6 +28,9 @@
             </section>
 
             <section class="simpleCalculator_result_wrapper">
+                <div class="simpleCalculator_result_title">
+                    Result
+                </div>
                 <div class="simpleCalculator_result" id="result">
                     Result placeholder
                 </div>
