Starting module 2 - FUnction s- Disable specs and disabled suites

--- a/Studies/simple-calculator.html
+++ b/Studies/simple-calculator.html
@@ -8,14 +8,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="lib/jasmine.css">
         <link rel="stylesheet" href="dist/main.css">
-    </head>
-    <body>
+
+        <!-- ********************************* -->
+        <!-- Jasmine Test Unit Framework Files -->
+        <!-- ********************************* -->
+
         <script src="lib/jasmine.js"></script>
         <script src="lib/jasmine-html.js"></script>
-        <script src="lib/boot.js"></script>
-        <script src="dist/calculator.js"></script>
-        <script src="dist/main.js"></script>
+        <script src="lib/boot0.js"></script>
+        <script src="lib/boot1.js"></script>
 
+        <script src="dist/calculator.js"></script>
+        <script src="dist/calculator.spec.js"></script>
+    </head>
+    <body>
         <article class="simpleCalculator">
             <section class="simpleCalculator_title_wrapper">
                 <h1 class="simpleCalculator_title">Simple Calculator</h1>
@@ -37,10 +43,6 @@
             </section>
         </article>
 
-        <script>
-            it('should have the correct title', function () {
-                expect(document.title).toBe('Simple Calculator');
-            });
-        </script>
+        <script src="dist/main.js"></script>
     </body>
 </html>
