--- a/Studies/simple-calculator.html
+++ b/Studies/simple-calculator.html
@@ -17,6 +17,7 @@
         <script src="lib/jasmine-html.js"></script>
         <script src="lib/boot0.js"></script>
         <script src="lib/boot1.js"></script>
+        <script src="dist/custom-matchers.js"></script>
 
         <script src="dist/calculator.js"></script>
         <script src="dist/calculator.spec.js"></script>
@@ -44,5 +45,6 @@
         </article>
 
         <script src="dist/main.js"></script>
+        <script src="dist/main.spec.js"></script>
     </body>
 </html>
