--- a/simple-calculator.html
+++ b/simple-calculator.html
@@ -13,14 +13,14 @@
         <!-- Jasmine Test Unit Framework Files -->
         <!-- ********************************* -->
 
-        <script src="lib/jasmine.js"></script>
+        <!-- <script src="lib/jasmine.js"></script>
         <script src="lib/jasmine-html.js"></script>
         <script src="lib/boot0.js"></script>
         <script src="lib/boot1.js"></script>
-        <script src="dist/custom-matchers.js"></script>
+        <script src="dist/custom-matchers.js"></script> -->
 
         <script src="dist/calculator.js"></script>
-        <script src="dist/calculator.spec.js"></script>
+        <!-- <script src="dist/calculator.spec.js"></script> -->
         <script>
             (function() {
                 window.addEventListener('DOMContentLoaded', function () {
@@ -60,6 +60,6 @@
         </article>
 
         <script src="dist/main.js"></script>
-        <script src="dist/main.spec.js"></script>
+        <!-- <script src="dist/main.spec.js"></script> -->
     </body>
 </html>
